# ldraw-parts

./: .gitignore  README.md  download.py  mounts.sh  pyproject.toml
LDRAW/: PARTS.LST  ldconfig.ldr  ldraw.pif  ledit.pif  readme.txt  sl2ld.lst  update.scr
LDRAW/MODELS/: LCAD9903.TXT  PART9903.TXT  READ9806.TXT  READ9807.TXT  READ9901.TXT  VOTE0001.TXT  VOTE9809.TXT  VOTE9810.TXT  VOTE9901.TXT  VOTE9902.TXT  VOTE9904.TXT  VOTE9905.TXT  VOTE9906.TXT  note0101.txt  note0102.txt  note0103.txt  note0201.txt  note0202.txt  note0203.txt  note0204.txt  note0205.txt  note0206.txt  note0301.txt  note0302.txt  note0303.txt  note0401.txt  note0402.txt  note0403.txt  note0404.txt  note0501.txt  vote0002.txt
ldraw/: ldraw.htm  ldraw.txt  ledit.htm  ledit.txt  license.txt  p.lst  readme.htm
